@@ -12,6 +12,7 @@ public final class Other  {
     public static final long    HALF_SECOND_TICK    = TICKS_PER_SECOND / 2;
 
     public static final int     MINECRAFT_LIMIT     = 16;
+    public static final int     OBJECTIVE_LIMIT     = 32;
     public static final int     TICKS_INT           = 20;
     public static final int     SECONDS             = 60;
     public static final int     INTO_NEXT_SIZE      = 1024;
